--- a/as2_behaviors/as2_behaviors_motion/package.xml
+++ b/as2_behaviors/as2_behaviors_motion/package.xml
@@ -22,6 +22,7 @@
   <depend>as2_msgs</depend>
   <depend>as2_motion_reference_handlers</depend>
   <depend>std_srvs</depend>
+  <depend>ug_mpc</depend>
 
   <!-- linting test dependencies -->
   <test_depend>ament_lint_auto</test_depend>
