--- a/as2_msgs/CMakeLists.txt
+++ b/as2_msgs/CMakeLists.txt
@@ -44,6 +44,7 @@ set(MSGS_FILES
   "msg/AlertEvent.msg"
   "msg/BehaviorStatus.msg"
   "msg/YawMode.msg"
+  "msg/ControllerDebug.msg"
 )
 
 set(SRVS_FILES
