--- a/as2_motion_controller/plugins/astc_controller/config/available_modes.yaml
+++ b/as2_motion_controller/plugins/astc_controller/config/available_modes.yaml
@@ -35,7 +35,7 @@ input_control_modes:
   # - 0b01000000 # SPEED with yaw ANGLE in the LOCAL_FLU_FRAME
   - 0b01000001 # SPEED with yaw ANGLE in the GLOBAL_ENU_FRAME
   # - 0b01000100 # SPEED with yaw SPEED in the LOCAL_FLU_FRAME
-  # - 0b01000101 # SPEED with yaw SPEED in the GLOBAL_ENU_FRAME
+  - 0b01000101 # SPEED with yaw SPEED in the GLOBAL_ENU_FRAME
   # - 0b01010000 # SPEED_IN_A_PLANE with yaw ANGLE in the LOCAL_FLU_FRAME
   # - 0b01010001 # SPEED_IN_A_PLANE with yaw ANGLE in the GLOBAL_ENU_FRAME
   # - 0b01010100 # SPEED_IN_A_PLANE with yaw SPEED in the LOCAL_FLU_FRAME
